# bourdain

./: .gitignore
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d1c9fbd7a44_add_category_eligible_blocks.py  5f3a8c1d2e90_add_trip_destination_coordinates.py  7c4e91a6b2d8_add_itinerary_slot_roles.py  96239a912e74_create_v2_domain_schema.py
backend/app/: config.py  logging_config.py
backend/app/db/: schema.sql
backend/app/graph/: itinerary.py  research.py  scoring.py  state.py  supervisor.py  web_fallback_agent.py
backend/app/services/: embeddings.py  llm.py  vector_store.py  web_search.py
backend/scripts/: run_eval.py  seed_fixtures.py  smoke_test_graph.py
backend/src/app/: config.py  main.py
backend/src/app/api/: routes.py
backend/src/app/db/: __init__.py  categories.py  itineraries.py  places.py  recommendations.py  research_runs.py  schema.sql  selections.py  trips.py
backend/src/app/graph/: build.py  city_profile_node.py  (+8 more)
backend/tests/: test_api_routes.py  test_city_profile_node.py  test_e2e.py  test_graph_build.py  test_guardrails.py  test_itinerary.py  test_llm.py  test_places.py  test_reduce_graded_candidates.py  test_research.py  test_scoring.py  test_supervisor_replan.py  test_vector_store.py  test_web_fallback_agent.py  test_web_search.py
backend/tests/test_db/: __init__.py  helpers.py  test_categories.py  test_itineraries.py  test_itinerary_slots.py  test_places.py  test_recommendations.py  test_research_runs.py  test_selections.py  test_trips.py
(+49 files in other folders)
