[project]
name = "bourdain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.75.0",
    "asyncpg>=0.30.0",
    "openai>=2.0.0",
    "pgvector>=0.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.12.0",
]
