[project]
name = "bourdain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.75.0",
    "asyncpg>=0.30.0",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "openai>=2.0.0",
    "pgvector>=0.4.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.12.0",
    "psycopg[binary,pool]>=3.2.0",
    "tavily-python>=0.7.0",
    "sse-starlette>=3.4.5",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
